force-app/main/default/objects/Account/fields/Account_Adminstrator__c.field-meta.xml
<CustomField>
    <fullName>Account_Adminstrator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Adminstrator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Type</field>
            <operation>equals</operation>
            <value>Agent</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Account Adminstrator)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>