force-app/main/default/objects/Account/fields/Account_Agent_s_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Agent_s_Type__c</fullName>
    <label>Account Agent&apos;s Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <default>true</default>
                <label>Fixed</label>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>