force-app/main/default/objects/Account/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>LEFT(  Name  , LEN( Name)  - 4 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account name to have the same reference in case of duplicated account</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>