force-app/main/default/objects/Account/fields/Account_Name_for_unique_index__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_for_unique_index__c</fullName>
    <externalId>true</externalId>
    <label>Account Name for unique index</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>