force-app/main/default/objects/Account/fields/Account_Source__c.field-meta.xml
<CustomField>
    <fullName>Account_Source__c</fullName>
    <label>Account Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Invoice Interchange</fullName>
            </value>
            <value>
                <fullName>website</fullName>
            </value>
            <value>
                <fullName>Digital Marketing</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Direct Sales - own network</fullName>
            </value>
            <value>
                <fullName>Direct Sales - lead list</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Events &amp; Forums</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>