force-app/main/default/objects/Account/fields/Account_transferred_another_Sales__c.field-meta.xml
<CustomField>
    <fullName>Account_transferred_another_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account transferred another Sales</label>
    <type>Checkbox</type>
</CustomField>