force-app/main/default/objects/Account/fields/Additional_Credit_Report_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Credit_Report_Notes__c</fullName>
    <label>Additional Credit Report Notes</label>
    <type>TextArea</type>
</CustomField>