force-app/main/default/objects/Account/fields/Address_Shipping_is_Address_Billing__c.field-meta.xml
<CustomField>
    <fullName>Address_Shipping_is_Address_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if Address Shipping is same than Address Billing</inlineHelpText>
    <label>Address Shipping is Address Billing</label>
    <type>Checkbox</type>
</CustomField>