force-app/main/default/objects/Account/fields/Agent_Code__c.field-meta.xml
<CustomField>
    <fullName>Agent_Code__c</fullName>
    <label>Agent Code</label>
    <type>TextArea</type>
</CustomField>