force-app/main/default/objects/Account/fields/Agent_Commision_Obligor_Platform_Fee__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commision_Obligor_Platform_Fee__c</fullName>
    <defaultValue>0.3</defaultValue>
    <label>Agent Commision Obligor Platform Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>