force-app/main/default/objects/Account/fields/Agent_Commision_Purchaser_Discount_Fee__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commision_Purchaser_Discount_Fee__c</fullName>
    <defaultValue>0.1</defaultValue>
    <label>Agent Commision Purchaser Discount Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>