force-app/main/default/objects/Account/fields/Agent_Commision_Purchaser_Discount_pct__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commision_Purchaser_Discount_pct__c</fullName>
    <formula>Agent__r.Agent_Commision_Purchaser_Discount_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Commision Purchaser Discount Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>