force-app/main/default/objects/Account/fields/Agent_Commision_Purchaser_Type__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commision_Purchaser_Type__c</fullName>
    <label>Agent Commision Purchaser Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual Rate (360d/year)</fullName>
            </value>
            <value>
                <fullName>Annual Rate (365d/year)</fullName>
            </value>
            <value>
                <fullName>Part of profit share (%)</fullName>
                <default>true</default>
                <label>Part of profit share (%)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>