force-app/main/default/objects/Account/fields/Agent_Commissions_Notes__c.field-meta.xml
<CustomField>
    <fullName>Agent_Commissions_Notes__c</fullName>
    <label>Agent Commissions Notes</label>
    <type>TextArea</type>
</CustomField>