force-app/main/default/objects/Account/fields/Alternative_email_to_add_in_communicatio__c.field-meta.xml
<CustomField>
    <fullName>Alternative_email_to_add_in_communicatio__c</fullName>
    <label>Alternative email to add in communicatio</label>
    <type>Email</type>
</CustomField>