force-app/main/default/objects/Account/fields/ARPA_IPA_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>ARPA_IPA_Ref_Number__c</fullName>
    <inlineHelpText>Give the reference number of the ARPA Signed from the supplier or the IPA in case of Funder</inlineHelpText>
    <label>ARPA / IPA Ref Number Escrow</label>
    <type>TextArea</type>
</CustomField>