force-app/main/default/objects/Account/fields/ARPA_IPA_Ref_Number_Trust__c.field-meta.xml
<CustomField>
    <fullName>ARPA_IPA_Ref_Number_Trust__c</fullName>
    <label>ARPA / IPA Ref Number Trust</label>
    <type>TextArea</type>
</CustomField>