force-app/main/default/objects/Account/fields/ARPA_IPA_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>ARPA_IPA_Signature_Date__c</fullName>
    <inlineHelpText>Fill with the Date when the IPA / ARPA is signed by the customer</inlineHelpText>
    <label>ARPA / IPA Signature Date Escrow</label>
    <type>Date</type>
</CustomField>