force-app/main/default/objects/Account/fields/ARPA_IPA_Signature_Date_Trust__c.field-meta.xml
<CustomField>
    <fullName>ARPA_IPA_Signature_Date_Trust__c</fullName>
    <label>ARPA / IPA Signature Date Trust</label>
    <type>Date</type>
</CustomField>