force-app/main/default/objects/Account/fields/Atradius_Rating__c.field-meta.xml
<CustomField>
    <fullName>Atradius_Rating__c</fullName>
    <inlineHelpText>Latest Rating providing by Atradius</inlineHelpText>
    <label>Atradius Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>