force-app/main/default/objects/Account/fields/auto_sweep_opt_in__c.field-meta.xml
<CustomField>
    <fullName>auto_sweep_opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto sweep opt in</label>
    <type>Checkbox</type>
</CustomField>