force-app/main/default/objects/Account/fields/autosweep_CCY__c.field-meta.xml
<CustomField>
    <fullName>autosweep_CCY__c</fullName>
    <label>Autosweep CCY</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
            <value>
                <fullName>SGD</fullName>
            </value>
            <value>
                <fullName>HKD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>