force-app/main/default/objects/Account/fields/autosweep_type__c.field-meta.xml
<CustomField>
    <fullName>autosweep_type__c</fullName>
    <label>Autosweep type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>any invoice</fullName>
                <default>true</default>
                <label>Any invoice</label>
            </value>
            <value>
                <fullName>credit insured invoice only</fullName>
                <label>Credit insured invoice only</label>
            </value>
            <value>
                <fullName>partially or not credit insured invoices only</fullName>
                <label>Partially or not credit insured invoices only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>