force-app/main/default/objects/Account/fields/Buyer_Category__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SME Active</fullName>
            </value>
            <value>
                <fullName>SME Non Active</fullName>
            </value>
            <value>
                <fullName>MNC Active</fullName>
            </value>
            <value>
                <fullName>MNC Non Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>