force-app/main/default/objects/Account/fields/Buyer_check_text__c.field-meta.xml
<CustomField>
    <fullName>Buyer_check_text__c</fullName>
    <formula>&quot;Name : &quot; + Name + br() +br() +
 &quot;Address : &quot; &amp; BR() &amp;
if(LEN(BillingStreet)&gt;0, BillingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(BillingCity)&gt;0,BillingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(BillingState)&gt;0, BillingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(BillingPostalCode)&gt;0,BillingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN(BillingCountry) &gt;0,BillingCountry,&quot;&quot;)

 + br() + br() +
 &quot;Company Registration Number: &quot; + Company_registration_number__c  + br() +br() +
 &quot;Insurer Company Reference Number: &quot; + Insurer_Company_Reference_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer check text</label>
    <type>Text</type>
</CustomField>