force-app/main/default/objects/Account/fields/Buyer_driven_map_count__c.field-meta.xml
<CustomField>
    <fullName>Buyer_driven_map_count__c</fullName>
    <label>Buyer driven map count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>