force-app/main/default/objects/Account/fields/buyer_full_address__c.field-meta.xml
<CustomField>
    <fullName>buyer_full_address__c</fullName>
    <formula>BillingStreet + &apos; &apos; +  BillingCity  + &apos; &apos; +  BillingPostalCode  + &apos; &apos; + BillingState  + &apos; &apos; + BillingCountry</formula>
    <label>Account Full Address</label>
    <type>Text</type>
</CustomField>