force-app/main/default/objects/Account/fields/buyer_full_name__c.field-meta.xml
<CustomField>
    <fullName>buyer_full_name__c</fullName>
    <formula>Primary_contact_First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Contact Full name</label>
    <type>Text</type>
</CustomField>