force-app/main/default/objects/Account/fields/Check_List_Notes__c.field-meta.xml
<CustomField>
    <fullName>Check_List_Notes__c</fullName>
    <inlineHelpText>Additional Check-List note, for non Standard cases</inlineHelpText>
    <label>Check-List Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>