force-app/main/default/objects/Account/fields/Check_List_Notes_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Check_List_Notes_Attachment__c</fullName>
    <inlineHelpText>List of Mandatory Check on Document and notes received</inlineHelpText>
    <label>Check-List Notes&amp;Attachment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Trade_Model__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>On_Boarding_N_A_all</valueSetName>
    </valueSet>
</CustomField>