force-app/main/default/objects/Account/fields/Check_List_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Check_List_Onboarding__c</fullName>
    <inlineHelpText>List of Mandatory check done by operation in the on-boarding process</inlineHelpText>
    <label>Check-List Onboarding</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Trade_Model__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Onboarding_All</valueSetName>
    </valueSet>
</CustomField>