force-app/main/default/objects/Account/fields/CL_Limit_Approval_Comment__c.field-meta.xml
<CustomField>
    <fullName>CL_Limit_Approval_Comment__c</fullName>
    <inlineHelpText>Credit limit Comment from Approval Credit Limit</inlineHelpText>
    <label>CL Limit Approval Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>