force-app/main/default/objects/Account/fields/CL_Rem_inc_prelst_buyer_conf_usd_eq__c.field-meta.xml
<CustomField>
    <fullName>CL_Rem_inc_prelst_buyer_conf_usd_eq__c</fullName>
    <formula>Un_utilised_adv_amt_inc_prel_app_usd_eq__c  / insured_loss_percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CL Rem inc prelst buyer conf usd eq</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>