force-app/main/default/objects/Account/fields/Company_Legal_type__c.field-meta.xml
<CustomField>
    <fullName>Company_Legal_type__c</fullName>
    <label>Company Legal type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporation - Nonprofit</fullName>
            </value>
            <value>
                <fullName>Public Company (PUBL)</fullName>
            </value>
            <value>
                <fullName>Limited Company (LLCO)</fullName>
            </value>
            <value>
                <fullName>PartnerShip (PNTR)</fullName>
            </value>
            <value>
                <fullName>Individual (INDV)</fullName>
            </value>
            <value>
                <fullName>Government (GOVT)</fullName>
            </value>
            <value>
                <fullName>Other (OTHR)</fullName>
            </value>
            <value>
                <fullName>Corporation - B corp</fullName>
                <isActive>false</isActive>
                <label>Corporation - B corp</label>
            </value>
            <value>
                <fullName>Corporation - C corp</fullName>
                <isActive>false</isActive>
                <label>Corporation - C corp</label>
            </value>
            <value>
                <fullName>Corporation - S corp</fullName>
                <isActive>false</isActive>
                <label>Corporation - S corp</label>
            </value>
            <value>
                <fullName>Limited liability company (LLC)</fullName>
                <isActive>false</isActive>
                <label>Limited liability company (LLC)</label>
            </value>
            <value>
                <fullName>Partnerships</fullName>
                <isActive>false</isActive>
                <label>Partnerships</label>
            </value>
            <value>
                <fullName>Public Company</fullName>
                <isActive>false</isActive>
                <label>Public Company</label>
            </value>
            <value>
                <fullName>Sole proprietorship</fullName>
                <isActive>false</isActive>
                <label>Sole proprietorship</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>