force-app/main/default/objects/Account/fields/Country_ISO__c.field-meta.xml
<CustomField>
    <fullName>Country_ISO__c</fullName>
    <label>Country ISO</label>
    <length>6</length>
    <type>Text</type>
</CustomField>