force-app/main/default/objects/Account/fields/Created_Date_month__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_month__c</fullName>
    <description>Format Date / month and Quarter fro report</description>
    <formula>CASE(YEAR( DateValue(CreatedDate)   ),
2007, &quot;2007&quot; ,
2008, &quot;2008&quot;,
2009, &quot;2009&quot;,
2010, &quot;2010&quot;,
2011, &quot;2011&quot;,
2012, &quot;2012&quot;,
2013, &quot;2013&quot;,
2014, &quot;2014&quot;,
2015, &quot;2015&quot;,
2016, &quot;2016&quot;,
2017, &quot;2017&quot;,
2018, &quot;2018&quot;,
2019, &quot;2019&quot;,
2020, &quot;2020&quot;,
&quot;None&quot;)

&amp; &quot;-&quot;

&amp;CASE(MONTH( DateValue(CreatedDate)  ),
1, &quot;01&quot; ,
2, &quot;02&quot;,
3, &quot;03&quot;,
4, &quot;04&quot;,
5, &quot;05&quot;,
6, &quot;06&quot;,
7, &quot;07&quot;,
8, &quot;08&quot;,
9, &quot;09&quot;,
10, &quot;10&quot;,
11, &quot;11&quot;,
12, &quot;12&quot;,
&quot;None&quot;)

&amp; &quot;-&quot;

&amp;CASE(MONTH( DateValue(CreatedDate) ),
1, &quot;Q1&quot; ,
2, &quot;Q1&quot;,
3, &quot;Q1&quot;,
4, &quot;Q2&quot;,
5, &quot;Q2&quot;,
6, &quot;Q2&quot;,
7, &quot;Q3&quot;,
8, &quot;Q3&quot;,
9, &quot;Q3&quot;,
10, &quot;Q4&quot;,
11, &quot;Q4&quot;,
12, &quot;Q4&quot;,
&quot;None&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Format Date / month and Quarter fro report</inlineHelpText>
    <label>Created Date /Month</label>
    <type>Text</type>
</CustomField>