force-app/main/default/objects/Account/fields/Credit_insurance_fee__c.field-meta.xml
<CustomField>
    <fullName>Credit_insurance_fee__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>For Credit insurance who do not need any instalment</description>
    <inlineHelpText>For Credit insurance who do not need any instalment</inlineHelpText>
    <label>Credit insurance fee</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>