force-app/main/default/objects/Account/fields/credit_insurance_notes__c.field-meta.xml
<CustomField>
    <fullName>credit_insurance_notes__c</fullName>
    <label>credit insurance notes</label>
    <type>TextArea</type>
</CustomField>