force-app/main/default/objects/Account/fields/Credit_Limit_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Account_Name__c</fullName>
    <description>Extended name for accounts having several Credit Limits</description>
    <externalId>true</externalId>
    <label>Credit Limit Account Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>