force-app/main/default/objects/Account/fields/Credit_Limit_CCY_text__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_CCY_text__c</fullName>
    <formula>TEXT( Credit_Limit_Requested_CCY__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit CCY text</label>
    <type>Text</type>
</CustomField>