force-app/main/default/objects/Account/fields/Credit_Limit_from_Incomlend_USD__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_from_Incomlend_USD__c</fullName>
    <formula>IF (  Credit_Limit_CCY_text__c  = &quot;EUR&quot;,  Total_CL_Limit_from_Incomlend__c  * Marketplace_for_EUR_FX_rate__r.latest_to_usd_rate__c ,  Total_CL_Limit_from_Incomlend__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit from Incomlend USD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>