force-app/main/default/objects/Account/fields/Credit_limit_insurance_currency__c.field-meta.xml
<CustomField>
    <fullName>Credit_limit_insurance_currency__c</fullName>
    <label>Credit Limit Insurance CCY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>