force-app/main/default/objects/Account/fields/Credit_Limit_Remain_inc_mrkplc_usd_equiv__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Remain_inc_mrkplc_usd_equiv__c</fullName>
    <formula>Un_utilised_adv_amt_mrk_place_usd_equiv__c /  insured_loss_percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit Remain inc mrkplc usd equiv</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>