force-app/main/default/objects/Account/fields/Credit_Limit_Request_Approved__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Request_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When the Credit Limit request has been approved internally</description>
    <inlineHelpText>When the Credit Limit request has been approved internally</inlineHelpText>
    <label>Credit Limit Request Approved</label>
    <type>Checkbox</type>
</CustomField>