force-app/main/default/objects/Account/fields/Credit_Limit_Requested__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_Requested__c</fullName>
    <inlineHelpText>Credit Limit requested for this Buyer (Submitted to Insurer)</inlineHelpText>
    <label>Credit Limit Requested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>