force-app/main/default/objects/Account/fields/Credit_Limit_requested_by_risk__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_requested_by_risk__c</fullName>
    <label>Credit Limit requested by risk</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>